--- a/front/src/components/header/style.css
+++ b/front/src/components/header/style.css
@@ -1,5 +1,5 @@
 .header{
-    height: 50px;
+    height: 55px;
     background-color: black;
     display: flex;
     justify-content: space-between;
@@ -13,10 +13,18 @@ img{
 }
 .btn{
     cursor: pointer;
-    height: 25px;
+    height: 35px;
     background-color: black;
     color: white;
     border: 2px solid white;
     border-radius: 5px;
     margin-right: 10px;
+    font-family: 'Amatic SC', cursive;
+    font-size: 3vh;
+    font-weight: 700;
+}
+.btn:hover{
+    background-color: white;
+    color: black;
+    border: 2px solid black;
 }
