--- a/front/src/components/home/style.css
+++ b/front/src/components/home/style.css
@@ -1,3 +1,10 @@
+.text-data{
+    font-family: 'Amatic SC', cursive;
+    font-weight: 700;
+    font-size: 30px;
+    color: black;
+    margin: 0;
+}
 .block-info2 {
     border: 3px solid black;
     min-width: 70%;
@@ -7,26 +14,46 @@
     border-radius: 10px;
 }
 .btn-block {
+    width: 30%;
     display: flex;
-    justify-content: end;
-    margin-bottom: 10px;
+    flex-direction: column;
+    align-items: center;
+    
+
 }
-.block {
-    height: 90vh;
+.flex{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+.block-home {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    
 }
 .btn2 {
     cursor: pointer;
-    height: 30px;
+    
     background-color: white;
     color: black;
     border: 2px solid black;
     border-radius: 5px;
-    margin-right: 10px;
-    font-size: 20px;
+    margin: 5px;
+    font-size: 70%;
+    padding: px;
+    
+}
+.btn2:hover {
+    background-color: black;
+    color: white;
+    transition: 0.5s;
+
 }
 .block-infoAcc {
     display: flex;
@@ -34,5 +61,39 @@
     align-items: flex-start;
 }
 .acc {
+    font-size: 18px;
+    color:grey;
+    margin: 0;
+}
+b{
     font-size: 20px;
+    color: black;
+}
+.block-fav-university{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 40px;
+    width: 100%;
+}
+table{
+    width: 70%;
+    text-align: center;
+    margin-top: 20px;
+    border: 3px solid black;
+    border-collapse: collapse;
+    font-size: 15px;
+    font-family: 'Amatic SC', cursive;
+  }
+  td,
+  th {
+    border: 3px solid black;
+    padding: 10px 40px;
+    max-width: 100px;
+    word-wrap: break-word;
+  }
+.wh{
+    padding: 6px;
+    width: 20%;
 }
