--- a/front/src/components/universities/style.css
+++ b/front/src/components/universities/style.css
@@ -1,22 +1,4 @@
-table {
-  border: 3px solid black;
-  border-collapse: collapse;
-  font-size: 15px;
-  font-family: poppins;
-}
-.table {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-td,
-th {
-  border: 3px solid black;
-  padding: 10px 40px;
-  max-width: 100px;
-  word-wrap: break-word;
-}
 a {
   text-decoration: none;
 }
@@ -27,25 +9,29 @@ a {
   height: 88vh;
 }
 .block-search {
-  display: flex;
-  justify-content: end;
-  width: 50%;
+  margin-right: 15px;
+  width: 29%;
 }
+input {
+  height: 11px;
+}
+h1,
 h2,
 h3 {
   text-align: center;
-  font-family: "Poppins";
+  font-family: 'Amatic SC', cursive;
   color: rgb(59, 59, 59);
+  font-weight: 700;
 }
 .cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-.card {
+/* .card {
   width: 350px;
   height: 400px;
-  box-shadow: 3px 2px 10px gray;
+  box-shadow: 5px 3px 20px gray;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -55,19 +41,118 @@ h3 {
   padding: 1%;
   box-sizing: border-box;
   background-color: rgb(236, 236, 236);
-}
+} */
 .img {
   border-radius: 10px;
   height: 200px;
   width: 300px;
 }
 .block {
-  height: 75vh;
+  height: 100%;
+  margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
 }
 .single-block {
-    width: 50%;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.page {
+  padding: 0 15%;
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: "Poppins";
+}
+li {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+}
+a {
+  color: rgb(127, 127, 127);
+  cursor: pointer;
+}
+.visually-hidden {
+  display: none;
+}
+.active {
+  font-weight: bold;
+  color: rgb(94, 90, 90);
+  font-size: 20px;
+  padding: 1% 2%;
+  border-radius: 30px;
+  box-shadow: 2px 2px 10px rgb(59, 59, 59);
+}
+.page-item:hover {
+  font-size: 20px;
+}
+.text {
+  font-family: 'Amatic SC', cursive;
+  color: rgb(59, 59, 59);
+  font-size: 1vh;
+}
+.js {
+  text-align: justify;
+
+}
+.img-block {
+  width: 50vw;
+  height: auto;
+  border-radius: 10px;
+  border: 2px solid rgb(59, 59, 59);
+}
+.flex-data{
+  display: flex;
+  flex-direction: column;
+  margin-right: 2%;
+  width: 100%;
+}
+i{
+  color: black;
+  text-decoration: underline;
+}
+.block-search-select{
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  margin-right: 10%;
+}
+.mobile{
+  display: flex;
+  flex-direction:row;
+  justify-content: center;
+  align-items: center;
+}
+.block-info{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.btn{
+  font-size: 3vh;
+}
+@media (max-width: 820px){
+  .mobile{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .flex-data{
+    align-items: center;
+    justify-content: center;
+  }
+  .btn{
+    font-size: 2vh;
+  }
 }
