--- a/front/src/components/universities/style.css
+++ b/front/src/components/universities/style.css
@@ -141,7 +141,7 @@ i{
 .btn{
   font-size: 3vh;
 }
-@media (max-width: 820px){
+/* @media (max-width: 820px){
   .mobile{
     display: flex;
     flex-direction: column;
@@ -155,4 +155,4 @@ i{
   .btn{
     font-size: 2vh;
   }
-}
+} */
